--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ form{
 form label{
   display: block;
   font-size: 20px;
-  color: blue;
+  color: rgb(51, 255, 0);
   margin: 0 0 10px;
 }
 .copyrignt{
-  color: aliceblue;
+  color: rgb(70, 208, 243);
   background-color: blueviolet;
   font-size: 13px;
   margin: 20px 0 0;
@@ -24,7 +24,7 @@ form label{
   width: 40%;
   padding: 15px 0;
   background: orange;
-  color: beige;
+  color: rgb(241, 241, 113);
   font-weight: bold;
   font-size: 18px;
   border: none;
